@@ -130,7 +130,7 @@ class WC_Stripe_Webhook_Handler extends WC_Stripe_Payment_Gateway {
 		}
 
 		if ( empty( $this->secret ) ) {
-			return $this->validate_request_user_agent( $request_headers );
+			return WC_Stripe_Webhook_State::VALIDATION_FAILED_EMPTY_SECRET;
 		}
 
 		// Check for a valid signature.
@@ -155,21 +155,6 @@ class WC_Stripe_Webhook_Handler extends WC_Stripe_Payment_Gateway {
 		}
 
 		return WC_Stripe_Webhook_State::VALIDATION_SUCCEEDED;
-	}
-
-	/**
-	 * Verify User Agent of the incoming webhook notification. Used as fallback for the cases when webhook secret is missing.
-	 *
-	 * @since 5.0.0
-	 * @version 5.0.0
-	 * @param array $request_headers The request headers from Stripe.
-	 * @return string The validation result (e.g. self::VALIDATION_SUCCEEDED )
-	 */
-	private function validate_request_user_agent( $request_headers ) {
-		$ua_is_valid = empty( $request_headers['USER-AGENT'] ) || preg_match( '/Stripe/', $request_headers['USER-AGENT'] );
-		$ua_is_valid = apply_filters( 'wc_stripe_webhook_is_user_agent_valid', $ua_is_valid, $request_headers );
-
-		return $ua_is_valid ? WC_Stripe_Webhook_State::VALIDATION_SUCCEEDED : WC_Stripe_Webhook_State::VALIDATION_FAILED_USER_AGENT_INVALID;
 	}
 
 	/**
